--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,3 +6,4 @@
   </script>
 <% end %>
 <h1>This page has been viewed <%= pluralize(@page_hits, 'time') %></h1>
+<p>Request handled by host: <b><%= @hostname %></b></p>
